Add input field for adding comment

--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -313,10 +313,10 @@
 <!--Пост развёрнутый-->
 <div class="b-popup" id="postDetails">
     <div class="center-screen" style="margin-top: -20px; margin-left: -40px;">
-        <div class="block_div" style="width: 600px; height: 600px;">
-            <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
+        <div class="block_div" style="width: 600px; height: 700px;">
+            <div class="block_div" style="padding: 5px 5px 20px; height: auto; width: auto; margin-bottom: 5px;">
                 <div class="div_post_item_list" style="margin-left: 10px;">
-                    <div class="scroll" style="height: 600px; margin-left: 15px; margin-right: 10px;">
+                    <div class="scroll" style="height: 580px; margin-left: 15px; margin-right: 10px;">
                         <div class="row">
                             <div class="col-2 col-md-1">
                                 <img class="figure_img_post_item_list" alt="image"
@@ -420,16 +420,16 @@
 
                                         </div>
 
-                                        <div class="col align-self-center" style=" width: 45px; margin-top: -33px; margin-left: -10px;">
+                                        <div class="col align-self-center" style=" width: 45px; margin-top: -35px; margin-left: -10px;">
                                             <a href="" class="p-text-color" style="font-size: 12px; margin-top: -15px; color: var(--main-color);">Ответить</a>
                                         </div>
 
-                                        <div class="col align-self-center" style="width: 50px; margin-top: -35px; margin-left: -95px; white-space: nowrap">
-                                            <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px;"></i>
+                                        <div class="col align-self-center" style="width: 50px; margin-top: -33px; margin-left: -95px; white-space: nowrap">
+                                            <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px; font-size: 12px;"></i>
                                             <label style="width: fit-content; font-size: 12px; margin-top: -23px; color: var(--main-color);" th:text="5"></label>
                                         </div>
                                     </div>
-                                    <hr class="block_line" style="margin-left: 75px; width: 450px; margin-top: -15px;"/>
+                                    <hr class="block_line" style="margin-left: 75px; width: 451px; margin-top: -15px;"/>
 
 
                                     <div class="row" style="margin-top: -10px; margin-left: 60px;">
@@ -452,16 +452,16 @@
 
                                                 </div>
 
-                                                <div class="col align-self-center" style=" width: 45px; margin-top: -33px; margin-left: -5px;">
+                                                <div class="col align-self-center" style=" width: 45px; margin-top: -35px; margin-left: -5px;">
                                                     <a href="" class="p-text-color" style="font-size: 12px; margin-top: -15px; color: var(--main-color);">Ответить</a>
                                                 </div>
 
-                                                <div class="col align-self-center" style="width: 50px; margin-top: -35px; margin-left: 40px; white-space: nowrap">
-                                                    <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px;"></i>
+                                                <div class="col align-self-center" style="width: 50px; margin-top: -33px; margin-left: 40px; white-space: nowrap">
+                                                    <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px; font-size: 12px;"></i>
                                                     <label style="width: fit-content; font-size: 12px; margin-top: -23px; color: var(--main-color);" th:text="5"></label>
                                                 </div>
                                             </div>
-                                            <hr class="block_line" style="margin-left: 75px; width: 372px; margin-top: -15px;"/>
+                                            <hr class="block_line" style="margin-left: 75px; width: 374px; margin-top: -15px;"/>
                                         </div>
                                     </div>
 
@@ -485,16 +485,16 @@
 
                                                 </div>
 
-                                                <div class="col align-self-center" style=" width: 45px; margin-top: -33px; margin-left: -5px;">
+                                                <div class="col align-self-center" style=" width: 45px; margin-top: -35px; margin-left: -5px;">
                                                     <a href="" class="p-text-color" style="font-size: 12px; margin-top: -15px; color: var(--main-color);">Ответить</a>
                                                 </div>
 
-                                                <div class="col align-self-center" style="width: 50px; margin-top: -35px; margin-left: 40px; white-space: nowrap">
-                                                    <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px;"></i>
+                                                <div class="col align-self-center" style="width: 50px; margin-top: -33px; margin-left: 40px; white-space: nowrap">
+                                                    <i class="fa-regular fa-heart" style="color: var(--main-color); margin-top: 5px; font-size: 12px;"></i>
                                                     <label style="width: fit-content; font-size: 12px; margin-top: -23px; color: var(--main-color);" th:text="5"></label>
                                                 </div>
                                             </div>
-                                            <hr class="block_line" style="margin-left: 75px; width: 372px; margin-top: -15px;"/>
+                                            <hr class="block_line" style="margin-left: 75px; width: 374px; margin-top: -15px;"/>
                                         </div>
                                     </div>
                                 </div>
@@ -502,6 +502,35 @@
 
                         </div>
                     </div>
+
+
+
+                    <div class="row" style="position: absolute; bottom: 20px; ">
+                        <!--Отправка комментария-->
+                        <div class="block_div" style="width: 538px; height: 40px; margin-left: 20px; margin-top: -20px;">
+                            <div class="row" style="margin-top: -25px; margin-bottom: -20px;">
+                                <hr class="block_line" style="margin-left: 7px; width: 526px;"/>
+                            </div>
+                            <div class="row" style="margin-top: 10px;">
+                                <div class="col-2" style="margin-top: 0px;">
+                                    <img class="figure_img_comment_item_list" alt="image"
+                                         src="https://cojo.ru/wp-content/uploads/2022/12/avatarki-dlia-vatsapa-25.webp"/>
+                                    <!--th:src="${group.getAvtar()}"/>-->
+                                </div>
+                                <div class="col-9" style="margin-top: 15px; margin-left: -15px;">
+                                    <input required type="text" name="name" class="form-control margin-top-20" id="nameGroupsInput"
+                                           aria-describedby="nameHelp" placeholder="Комментарий..."
+                                           style="width: 400px;"
+                                           minlength="1" oninvalid="this.setCustomValidity('Пустое поле не допустимо')"
+                                           oninput="this.setCustomValidity('')"/>
+                                </div>
+                                <div class="col-1" style="margin-top: 20px; margin-left: 5px;">
+                                    <i class="fa-regular fa-paper-plane" style="color: var(--main-color); font-size: 30px;"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
