--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,7 +147,7 @@
                                             <div>
                                                 <p class="date_p_post_item_list p-text-color"></p>
                                                 <script th:inline="javascript">
-                                                    showMessage([[${post.getDatePublication()}]]);
+                                                    getDateFormatForPost([[${post.getDatePublication()}]]);
                                                 </script>
                                             </div>
                                         </div>
