--- a/src/main/resources/static/css/main_layout_items.css
+++ b/src/main/resources/static/css/main_layout_items.css
@@ -59,3 +59,15 @@
     border: 3px solid #fff;
     transition: background ease-out 200ms;
 }
+
+/* Фото поста */
+.post_img {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10%;
+    background: white;
+    width: 445px;
+    height: 320px;
+    border: 3px solid #fff;
+    transition: background ease-out 200ms;
+}
